fix width on mobile

--- a/src/pages/video.css
+++ b/src/pages/video.css
@@ -61,8 +61,47 @@
   color: red;
 }
 
+.camera-button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: none;
+  cursor: pointer;
+  position: relative;
+}
+
+.camera-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  border: 4px solid #000000;
+}
+.App {
+  position: relative;
+}
+
+.vertical-box {
+  position: absolute;
+  /* top: 0; */
+  left: 50%; /* Position horizontally at the center */
+  transform: translateX(-50%); /* Center the box horizontally */
+  /* background-color: red; Red color */
+  border: 1px solid red;
+  z-index: 1; /* Ensure it appears above the webcam view */
+}
+
+
 /* Media query for responsive design */
 @media (max-width: 768px) {
+  .vertical-box {
+    width: 80% !important; /* Adjust the width for mobile devices */
+  }
   .webcam-container {
     height: 80vh; /* Adjust the height as needed for mobile devices */
   }
@@ -122,38 +161,3 @@
   }
 }
 
-
-.camera-button {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  border: none;
-  cursor: pointer;
-  position: relative;
-}
-
-.camera-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
-  background-color: white;
-  border-radius: 50%;
-  border: 4px solid #000000;
-}
-.App {
-  position: relative;
-}
-
-.vertical-box {
-  position: absolute;
-  /* top: 0; */
-  left: 50%; /* Position horizontally at the center */
-  transform: translateX(-50%); /* Center the box horizontally */
-  /* background-color: red; Red color */
-  border: 1px solid red;
-  z-index: 1; /* Ensure it appears above the webcam view */
-}
